# taskflow

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 20260526_0001_core_schema.py  20260526_0001_layer3_core_schema.py  20260610_0002_async_outbox.py  20260610_0002_layer4_async_outbox.py  20260701_0003_webhook_delivery.py  20260711_0004_stripe_payments.py
app/: main.py
app/api/v1/: auth.py  files.py  integrations.py  jobs.py  llm.py  payments.py  router.py  system.py  tasks.py  teams.py  users.py  webhooks.py  ws.py
app/core/: concurrency.py  config.py  deps.py  errors.py  logging.py  middleware.py  security.py
app/db/: bootstrap.py  clients.py  models.py  search.py  session.py  uow.py
app/integrations/: circuit_breaker.py  email.py  http.py  llm.py  runtime.py  stripe.py  webhooks.py
app/repositories/: __init__.py  base.py  outbox_repository.py  payment_repository.py  task_repository.py  team_repository.py  webhook_repository.py
app/schemas/: common.py  files.py  jobs.py  llm.py  payments.py  tasks.py  teams.py  users.py  webhooks.py
app/services/: tasks.py  teams.py  users.py
app/static/: sample_report.txt
app/storage/: base.py  factory.py  local.py  presign.py  s3.py
app/websockets/: broker.py  manager.py  realtime.py
app/workers/: jobs.py  queue.py  runtime.py  scheduler.py  settings.py
docker/: mutation.Dockerfile
docs/: ARCHITECTURE.md  CHANGELOG.md  SCENARIOS.md
postman/: TaskFlow.postman_collection.json
tests/: conftest.py  test_app.py  test_background_jobs.py  test_integrations.py
tests/e2e/: test_task_journey.py
tests/factories/: __init__.py  task_payload.py
tests/integration/: test_containers.py  test_negative_paths.py
tests/unit/: test_circuit_breaker.py  test_security.py  test_signed_tokens.py
