[project]
name = "taskflow"
version = "0.1.0"
description = "TaskFlow backend platform for task, team, and integration workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0,<0.137.0",
    "uvicorn[standard]>=0.30.0,<0.31.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "email-validator>=2.1.0,<3.0.0",
    "sqlalchemy>=2.0.30,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "greenlet>=3.0.0,<4.0.0",
    "aiosqlite>=0.20.0,<1.0.0",
    "redis>=5.0.0,<6.0.0",
    "motor>=3.5.0,<4.0.0",
    "httpx>=0.28.0,<1.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "authlib>=1.3.1,<2.0.0",
    "slowapi>=0.1.9,<1.0.0",
    "arq>=0.26.0,<1.0.0",
    "apscheduler>=3.10.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=5.0.0,<7.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "factory-boy>=3.3.0,<4.0.0",
    "Faker>=30.0.0,<40.0.0",
    "httpx2>=2.0.0,<3.0.0",
    "hypothesis>=6.100.0,<7.0.0",
    "freezegun>=1.5.0,<2.0.0",
    "respx>=0.21.0,<1.0.0",
    "ruff>=0.6.0,<1.0.0",
    "mypy>=1.11.0,<2.0.0",
]
s3 = [
    "aioboto3>=13.0.0,<15.0.0",
]
containers = [
    "testcontainers>=4.0.0,<5.0.0",
]
mutation = [
    "mutmut>=3.3.0,<4.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
markers = [
    "unit: fast tests without application IO",
    "integration: tests combining API, database, queue or adapter boundaries",
    "e2e: full user journey tests",
    "slow: tests that take more than one second",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["app/migrations/*", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING",
]
show_missing = true
skip_covered = false
fail_under = 70

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
